--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>three.ar.js - Surfaces</title>
+  <title>Beaware</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -65,6 +65,11 @@
   </style>
 </head>
 <body>
+  <canvas id="canvas"></canvas>
+  <div style="display:none;">
+    <img id="source" src="assets/hero-img.jpg"
+         width="300" height="227">
+  </div>
 <!--<div id="info">
   <span class="title">Render detected surfaces.</span><br/>
   <span class="links">
@@ -176,12 +181,13 @@ function createProduct(position, text)
   bitmap.height = 800;
 
   // Background
-  context.fillStyle = 'rgb(94, 122, 155)';
-  context.fillRect(0, 0, bitmap.width, bitmap.height);
+  //context.fillStyle = 'rgb(94, 122, 155)';
+  //context.fillRect(0, 0, bitmap.width, bitmap.height);
   //context.fillStyle = 'rgba(150, 150, 150)';
   //context.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
-  var image = new Image(bitmap.width, bitmap.height);
-  image.src = 'assets/hero-img.jpg';
+  //var image = new Image(bitmap.width, bitmap.height);
+  //image.src = 'assets/hero-img.jpg';
+  var image = document.getElementById('source');
   context.drawImage(image, 0, 0, bitmap.width/2, bitmap.height/2);
 
   // Draw text
@@ -201,7 +207,7 @@ function createProduct(position, text)
   var geometry = new THREE.PlaneGeometry( 0.5, 0.5, 32, 32 );
   var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide, transparent: true, opacity: 0.8} );
   var textGeometry = new THREE.Mesh( geometry, material );
-  textGeometry.position.set(position.x, position.y, position.z);
+  textGeometry.position.set(position.x, position.y, position.z + 0.02);
   scene.add( textGeometry );
   var product = {anchor:mesh, description:textGeometry, animation:0.0};
   products.push(product);
