we got the panel

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -21,15 +21,15 @@
 
 		<div id="welcome" class="content">
 			<div id="logo"></div>
-			welcome
 		</div>
 
 		<div id="productInfo" class="content">
-			product info
+			<div id="panel">
+				<h1>My sweet product</h1>
+				<span>Some text</span>
+			</div>
 		</div>
 	</div>
-
-
 
 </body>
 
