--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ function createProduct(position, text)
   var marginX = lineHeight * 2;
   var marginY = lineHeight * 2;
   context.font = '36px Open Sans';
-  context.fillStyle = 'white';
+  context.fillStyle = 'black';
   wrapText(context, text, marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
 
   // Create a texture
