--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ function init() {
 
   // Bind our event handlers
   window.addEventListener('resize', onWindowResize, false);
+  canvas.addEventListener('touchstart', onClick, false);
 
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
@@ -319,6 +320,42 @@ function wrapText(context, text, x, y, maxWidth, lineHeight)
 
       context.fillText(line, x, y);
       y += lineHeight;
+  }
+}
+
+/**
+ * When clicking on the screen, fire a ray from where the user clicked
+ * on the screen and if a hit is found, place a cube there.
+ */
+function onClick (e)
+{
+  // If we don't have a touches object, abort
+  // TODO: is this necessary?
+  if (!e.touches[0]) {
+    return;
+  }
+
+  // Inspect the event object and generate normalize screen coordinates
+  // (between 0 and 1) for the screen position.
+  var x = e.touches[0].pageX / window.innerWidth;
+  var y = e.touches[0].pageY / window.innerHeight;
+
+  // Send a ray from the point of click to the real world surface
+  // and attempt to find a hit. `hitTest` returns an array of potential
+  // hits.
+  var hits = vrDisplay.hitTest(x, y);
+
+  // If a hit is found, just use the first one
+  if (hits && hits.length) {
+    var hit = hits[0];
+    // Use the `placeObjectAtHit` utility to position
+    // the cube where the hit occurred
+    THREE.ARUtils.placeObjectAtHit(cube,  // The object to place
+                                   hit,   // The VRHit object to move the cube to
+                                   1,     // Easing value from 0 to 1; we want to move
+                                          // the cube directly to the hit position
+                                   true); // Whether or not we also apply orientation
+
   }
 }
 </script>
