--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
 var vrDisplay, vrControls, vrFrameData, arView;
 var canvas, camera, scene, renderer;
+var hitMesh;
 var products = [];
 
 /**
@@ -151,6 +152,11 @@ function init() {
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
   var ambient = new THREE.AmbientLight( 0x555555 );
   scene.add(ambient);
+
+  var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
+  var material = new THREE.MeshStandardMaterial();
+  hitMesh = new THREE.Mesh( geometry, material );
+  scene.add(hitMesh);
 
   createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
 'and building its own understanding of the real world. \nARCores motion tracking technology uses the phones camera to identify interesting points,' +
@@ -350,7 +356,7 @@ function onClick (e)
     var hit = hits[0];
     // Use the `placeObjectAtHit` utility to position
     // the cube where the hit occurred
-    THREE.ARUtils.placeObjectAtHit(cube,  // The object to place
+    THREE.ARUtils.placeObjectAtHit(hitMesh,  // The object to place
                                    hit,   // The VRHit object to move the cube to
                                    1,     // Easing value from 0 to 1; we want to move
                                           // the cube directly to the hit position
