--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -1,6 +1,8 @@
 <head>
 
+	<link rel="stylesheet" type="text/css" href="css/font.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
+
 	<!-- libraries --!>
 	<script src="scripts/jquery-3.2.1.min.js"></script>
 
@@ -26,7 +28,7 @@
 		<div id="productInfo" class="content">
 			<div id="panel">
 				<h1>My sweet product</h1>
-				<span>Some text</span>
+				<span>Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
 			</div>
 		</div>
 	</div>
