--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ function init() {
   var arDebug = new THREE.ARDebug(vrDisplay, scene, {
     showLastHit: true,
     showPoseStatus: true,
-    showPlanes: false,
+    showPlanes: true,
   });
   document.body.appendChild(arDebug.getElement());
 
@@ -349,7 +349,7 @@ function onClick (e)
   // Send a ray from the point of click to the real world surface
   // and attempt to find a hit. `hitTest` returns an array of potential
   // hits.
-  var hits = vrDisplay.hitTest(x, y);
+  var hits = vrDisplay.prototype.hitTest(x, y);
 
   // If a hit is found, just use the first one
   if (hits && hits.length) {
