--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@ function createProducts()
   var x3 = new THREE.Vector3(0.3, -0.5, 0);
 
   var translation = recordedHits[0] - x1;
+  translation = new THREE.Vector3(0, 0, 0);
 
   createProduct(translation + new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
 'and building its own understanding of the real world. \nARCores motion tracking technology uses the phones camera to identify interesting points,' +
