--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -10,6 +10,7 @@
 	<script src="scripts/config.js"></script>
 
 	<!-- app --!>
+	<script src="scripts/chart.js"></script>
 	<script src="scripts/app.js"></script>
 
 </head>
@@ -30,6 +31,7 @@
 				<h1>My sweet product</h1>
 				<span>Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
 			</div>
+			<canvas id="chartCanvas" width="800" height="800"></canvas> 
 		</div>
 	</div>
 
