--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ function createProducts()
 
   var translation = recordedHits[0] - x1;
   var localToWorld = new THREE.Matrix4();
-  localToWorld.setPosition(x1-recordedHits[0]);
+  localToWorld.setPosition(-recordedHits[0]);
 
   createProduct(new THREE.Vector3(-0.3, 0.5, 0.0), localToWorld, 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
 'and building its own understanding of the real world. \nARCores motion tracking technology uses the phones camera to identify interesting points,' +
