--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ function createProducts()
   var x2 = new THREE.Vector3(-0.3, -0.5, 0);
   var x3 = new THREE.Vector3(0.3, -0.5, 0);
 
-  var translation = recordedHits[0] - x1;
+  var translation = recordedHits[0];
   var localToWorld = new THREE.Matrix4();
-  localToWorld.setPosition(recordedHits[0] - x1);
+  localToWorld.setPosition(translation);
   hitMesh.position.set(translation);
 
   createProduct(new THREE.Vector3(-0.3, 0.5, 0.0), localToWorld, 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
