--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@ function onClick (e)
 
 function createProducts()
 {
-  var x1 = new THREE.Vector3(0, -0.5, 0.5);
+  var x1 = new THREE.Vector3(0, 0.0, 0.5);
   var x2 = new THREE.Vector3(-0.3, -0.5, 0);
   var x3 = new THREE.Vector3(0.3, -0.5, 0);
 
-  var translation = recordedHits[0];
+  var translation = recordedHits[0] - x1;
   var localToWorld = new THREE.Matrix4();
   localToWorld.setPosition(translation);
   hitMesh.position.set(translation);
