--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@ function createProducts()
   var x2 = new THREE.Vector3(-0.3, -0.5, 0);
   var x3 = new THREE.Vector3(0.3, -0.5, 0);
 
-  var translation = recordedHits[0].clone().add(x1);
+  var translation = recordedHits[0].clone().sub(x1);
   var localToWorld = new THREE.Matrix4();
   localToWorld.setPosition(translation);
-  hitMesh.position.set(-translation);
+  hitMesh.position.set(translation.x, translation.y, translation.z);
 
   createProduct(new THREE.Vector3(-0.3, 0.5, 0.0), localToWorld, 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
 'and building its own understanding of the real world. \nARCores motion tracking technology uses the phones camera to identify interesting points,' +
