--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 <script src="./three.js"></script>
 <script src="./VRControls.js"></script>
 <script src="./three.ar.js"></script>
+<script src="./numeric.js"></script>
 <script>
 
 var vrDisplay, vrControls, vrFrameData, arView;
@@ -211,19 +212,51 @@ function onClick (e)
   }
 }
 
+function estimateTransformation(localToWorld, X, Y)
+{
+  // Estimate translation
+  var nSamples = X.length;
+  var xAvg = new THREE.Vector3();
+  var yAvg = new THREE.Vector3();
+  for(int i = 0; i < nSamples; i++)
+  {
+    xAvg.add(X[i]);
+    yAvg.add(Y[i]);
+  }
+  xAvg.multiplyScalar(1.0 / nSamples);
+  yAvg.multiplyScalar(1.0 / nSamples);
+
+  var translation = yAvg.clone().sub(xAvg);
+  localToWorld.setPosition(translation);
+  hitMesh.position.set(translation.x, translation.y, translation.z);
+
+
+  // Estimate rotation
+  var P = new Array(nSamples);
+  var Q = new Array(nSamples);
+  for (var i = 0; i < nSamples; i++) {
+    P[i] = [X[i].x - xAvg.x, X[i].y - xAvg.y, X[i].z - xAvg.z];
+    Q[i] = [Y[i].x - yAvg.x, Y[i].y - yAvg.y, Y[i].z - yAvg.z];
+  }
+
+  var A = numeric.dot(numeric.transpose(P), Q);
+  var svd = numeric.svd(A);
+  var R = numeric.dot(svd.U, numeric.transpose(svd.V));
+}
+
 function createProducts()
 {
   var x1 = new THREE.Vector3(0, -0.5, 0.5);
   var x2 = new THREE.Vector3(-0.3, -0.5, 0);
   var x3 = new THREE.Vector3(0.3, -0.5, 0);
 
-  var translation1 = recordedHits[0].clone().sub(x1);
+  /*var translation1 = recordedHits[0].clone().sub(x1);
   var translation2 = recordedHits[1].clone().sub(x2);
   var translation3 = recordedHits[2].clone().sub(x3);
-  var translation = translation1.add(translation2.add(translation3)).multiplyScalar(0.333333);
+  var translation = translation1.add(translation2.add(translation3)).multiplyScalar(0.333333);*/ª
   var localToWorld = new THREE.Matrix4();
-  localToWorld.setPosition(translation);
-  hitMesh.position.set(translation.x, translation.y, translation.z);
+  //localToWorld.setPosition(translation);
+  estimateTransformation(localToWorld, [x1, x2, x3], recordedHits);
 
   createProduct(new THREE.Vector3(-0.3, 0.5, 0.0), localToWorld, 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
 'and building its own understanding of the real world. \nARCores motion tracking technology uses the phones camera to identify interesting points,' +
