--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function createProducts()
   /*var translation1 = recordedHits[0].clone().sub(x1);
   var translation2 = recordedHits[1].clone().sub(x2);
   var translation3 = recordedHits[2].clone().sub(x3);
-  var translation = translation1.add(translation2.add(translation3)).multiplyScalar(0.333333);*/ª
+  var translation = translation1.add(translation2.add(translation3)).multiplyScalar(0.333333);*/
   var localToWorld = new THREE.Matrix4();
   //localToWorld.setPosition(translation);
   estimateTransformation(localToWorld, [x1, x2, x3], recordedHits);
