--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ function onClick (e)
   }
 }
 
-function estimateTransformation(localToWorld, X, Y)
+function estimateTransformation(X, Y)
 {
   // Estimate translation
   var nSamples = X.length;
@@ -227,9 +227,6 @@ function estimateTransformation(localToWorld, X, Y)
   yAvg.multiplyScalar(1.0 / nSamples);
 
   var translation = yAvg.clone().sub(xAvg);
-  localToWorld.setPosition(translation);
-  hitMesh.position.set(translation.x, translation.y, translation.z);
-
 
   // Estimate rotation
   var P = new Array(nSamples);
@@ -242,8 +239,14 @@ function estimateTransformation(localToWorld, X, Y)
   var A = numeric.dot(numeric.transpose(P), Q);
   var svd = numeric.svd(A);
   var R = numeric.dot(svd.U, numeric.transpose(svd.V));
+
+  // Create matrix
+  var localToWorld = new THREE.Matrix4();
   localToWorld.makeBasis(new THREE.Vector3(R[0][0], R[1][0], R[2][0]), new THREE.Vector3(R[0][1], R[1][1], R[2][1]),
     new THREE.Vector3(R[0][2], R[1][2], R[2][2]));
+  localToWorld.setPosition(translation);
+  hitMesh.position.set(translation.x, translation.y, translation.z);
+  return localToWorld;
 }
 
 function createProducts()
@@ -256,9 +259,8 @@ function createProducts()
   var translation2 = recordedHits[1].clone().sub(x2);
   var translation3 = recordedHits[2].clone().sub(x3);
   var translation = translation1.add(translation2.add(translation3)).multiplyScalar(0.333333);*/
-  var localToWorld = new THREE.Matrix4();
   //localToWorld.setPosition(translation);
-  estimateTransformation(localToWorld, [x1, x2, x3], recordedHits);
+  var localToWorld = estimateTransformation(localToWorld, [x1, x2, x3], recordedHits);
 
   createProduct(new THREE.Vector3(-0.3, 0.5, 0.0), localToWorld, 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
 'and building its own understanding of the real world. \nARCores motion tracking technology uses the phones camera to identify interesting points,' +
