--- a/index.html
+++ b/index.html
@@ -238,7 +238,11 @@ function estimateTransformation(X, Y)
 
   var A = numeric.dot(numeric.transpose(P), Q);
   var svd = numeric.svd(A);
-  var R = numeric.dot(svd.U, numeric.transpose(svd.V));
+  var V = svd.U;
+  var WT = numeric.transpose(svd.V);
+  var det = numeric.det(numeric.dot(V, WT));
+  var D = [[1, 0, 0][0, 1, 0][0, 0, det]];
+  var R = numeric.dot(V, numeric.dot(D, WT));
 
   // Create matrix
   var localToWorld = new THREE.Matrix4();
