--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@ function estimateTransformation(X, Y)
                   R[1][0], R[1][1], R[1][2], 0,
                   R[2][0], R[2][1], R[2][2], 0,
                   translation.x, translation.y, translation.z, 1.0);
+  console.log(R[0][0] + ", " + R[1][0]);
   /*localToWorld.makeBasis(new THREE.Vector3(R[0][0], R[1][0], R[2][0]), new THREE.Vector3(R[0][1], R[1][1], R[2][1]),
     new THREE.Vector3(R[0][2], R[1][2], R[2][2]));
   localToWorld.setPosition(translation);*/
