--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@ function estimateTransformation(X, Y)
   var V = svd.U;
   var WT = numeric.transpose(svd.V);
   var det = numeric.det(numeric.dot(V, WT));
+  console.log(det);
   var D = [[1, 0, 0][0, 1, 0][0, 0, det]];
   var R = numeric.dot(V, numeric.dot(D, WT));
   //var RT = numeric.transpose(R);
@@ -251,7 +252,8 @@ function estimateTransformation(X, Y)
                   R[1][0], R[1][1], R[1][2], 0,
                   R[2][0], R[2][1], R[2][2], 0,
                   translation.x, translation.y, translation.z, 1.0);
-  console.log(R[0][0] + ", " + R[1][0]);
+  console.log(R[0][0] + ", " + R[1][0] + ", " + R[2][0] + ", " + translation.x);
+
   /*localToWorld.makeBasis(new THREE.Vector3(R[0][0], R[1][0], R[2][0]), new THREE.Vector3(R[0][1], R[1][1], R[2][1]),
     new THREE.Vector3(R[0][2], R[1][2], R[2][2]));
   localToWorld.setPosition(translation);*/
