--- a/index.html
+++ b/index.html
@@ -242,17 +242,19 @@ function estimateTransformation(X, Y)
   var WT = numeric.transpose(svd.V);
   var det = numeric.det(numeric.dot(V, WT));
   console.log(det);
-  var D = [[1, 0, 0][0, 1, 0][0, 0, det]];
+  var D = [[1.0, 0.0, 0.0][0.0, 1.0, 0.0][0.0, 0.0, det]];
   var R = numeric.dot(V, numeric.dot(D, WT));
   //var RT = numeric.transpose(R);
 
   // Create matrix
   var localToWorld = new THREE.Matrix4();
-  localToWorld.set(R[0][0], R[0][1], R[0][2], 0,
-                  R[1][0], R[1][1], R[1][2], 0,
-                  R[2][0], R[2][1], R[2][2], 0,
+  localToWorld.set(R[0][0], R[0][1], R[0][2], 0.0,
+                  R[1][0], R[1][1], R[1][2], 0.0,
+                  R[2][0], R[2][1], R[2][2], 0.0,
                   translation.x, translation.y, translation.z, 1.0);
   console.log(R[0][0] + ", " + R[1][0] + ", " + R[2][0] + ", " + translation.x);
+  console.log(R[0][1] + ", " + R[1][1] + ", " + R[2][1] + ", " + translation.y);
+  console.log(R[0][2] + ", " + R[1][2] + ", " + R[2][2] + ", " + translation.z);
 
   /*localToWorld.makeBasis(new THREE.Vector3(R[0][0], R[1][0], R[2][0]), new THREE.Vector3(R[0][1], R[1][1], R[2][1]),
     new THREE.Vector3(R[0][2], R[1][2], R[2][2]));
