--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ function estimateTransformation(X, Y)
   var det = numeric.det(numeric.dot(V, WT));
   console.log(det);
   var D = [[1.0, 0.0, 0.0][0.0, 1.0, 0.0][0.0, 0.0, det]];
+  //var temp = numeric.dot(D, WT);
   var R = numeric.dot(V, WT);
-  //var RT = numeric.transpose(R);
 
   // Create matrix
   var localToWorld = new THREE.Matrix4();
@@ -269,11 +269,6 @@ function createProducts()
   var x2 = new THREE.Vector3(-0.3, -0.5, 0);
   var x3 = new THREE.Vector3(0.3, -0.5, 0);
 
-  /*var translation1 = recordedHits[0].clone().sub(x1);
-  var translation2 = recordedHits[1].clone().sub(x2);
-  var translation3 = recordedHits[2].clone().sub(x3);
-  var translation = translation1.add(translation2.add(translation3)).multiplyScalar(0.333333);*/
-  //localToWorld.setPosition(translation);
   var localToWorld = estimateTransformation([x1, x2, x3], recordedHits);
 
   createProduct(new THREE.Vector3(-0.3, 0.5, 0.0), localToWorld, 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
