--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ function estimateTransformation(X, Y)
   console.log(det);
   var D = [[1.0, 0.0, 0.0][0.0, 1.0, 0.0][0.0, 0.0, det]];
   var temp = numeric.dot(D, WT);
-  var R = numeric.dot(V, temp);
+  var R = numeric.dot(V, WT);
 
   // Create matrix
   var localToWorld = new THREE.Matrix4();
