swithing pages ok

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -22,11 +22,11 @@
 	</div>
 	<div id="views" class="content">
 
-		<div id="welcome" class="content">
+		<div id="welcome" class="content page">
 			<div id="logo"></div>
 		</div>
 
-		<div id="productInfo" class="content">
+		<div id="productInfo" class="content page">
 			<div id="panel">
 				<h1>My sweet product</h1>
 				<span>Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
