--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ function createProduct(position, localToWorld, text)
 {
   var trans = new THREE.Vector3();
   var rot = new THREE.Quaternion();
-  var scale;
+  var scale = new THREE.Vector3();
   localToWorld.decompose(trans, rot, scale);
   var p = position.clone().add(trans);
 
