--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -41,6 +41,11 @@
 
 				<canvas width="800" height="800"></canvas> 
 			</div>
+			<div id="logos">
+				<div class=logo>
+					
+				</div>
+			</div>
 		</div>
 	</div>
 
