--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ function createProduct(position, localToWorld, text)
   var rot = new THREE.Quaternion();
   var scale = new THREE.Vector3();
   localToWorld.decompose(trans, rot, scale);
-  var p = position.clone().add(trans).multiplyScalar(-1.0);
+  var p = position.clone().add(trans);
 
   var xAxis = new THREE.Vector3(), yAxis = new THREE.Vector3(), zAxis = new THREE.Vector3();
   localToWorld.extractBasis(xAxis, yAxis, zAxis);
@@ -298,7 +298,7 @@ function createProduct(position, localToWorld, text)
 	material.roughness = 0.5;
 	material.metalness = 0.5;
   var mesh = new THREE.Mesh( geometry, material );
-  mesh.position.set(p.x, p.y, p.z);
+  mesh.position.set(trans.x, trans.y, trans.z);
   scene.add( mesh );
 
   // Create image
