--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@ function createProduct(position, localToWorld, text)
   var scale = new THREE.Vector3();
   localToWorld.decompose(trans, rot, scale);
   var p = position.clone().add(trans);
+  console.log(trans.x + ", " + trans.y + ", " + trans.z);
+  console.log(p.x + ", " + p.y + ", " + p.z);
 
   var xAxis = new THREE.Vector3(), yAxis = new THREE.Vector3(), zAxis = new THREE.Vector3();
   localToWorld.extractBasis(xAxis, yAxis, zAxis);
@@ -298,7 +300,7 @@ function createProduct(position, localToWorld, text)
 	material.roughness = 0.5;
 	material.metalness = 0.5;
   var mesh = new THREE.Mesh( geometry, material );
-  mesh.position.set(trans.x, trans.y, trans.z);
+  mesh.position.set(p.x, p.y, p.z);
   scene.add( mesh );
 
   // Create image
