--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@ function estimateTransformation(X, Y)
 
   // Create matrix
   var localToWorld = new THREE.Matrix4();
-  localToWorld.set(R[0][0], R[0][1], R[0][2], 0.0,
-                  R[1][0], R[1][1], R[1][2], 0.0,
-                  R[2][0], R[2][1], R[2][2], 0.0,
-                  translation.x, translation.y, translation.z, 1.0);
+  localToWorld.set(R[0][0], R[0][1], R[0][2], translation.x,
+                  R[1][0], R[1][1], R[1][2], translation.y,
+                  R[2][0], R[2][1], R[2][2], translation.z,
+                  0.0, 0.0, 0.0, 1.0);
   console.log(R[0][0] + ", " + R[1][0] + ", " + R[2][0] + ", " + translation.x);
   console.log(R[0][1] + ", " + R[1][1] + ", " + R[2][1] + ", " + translation.y);
   console.log(R[0][2] + ", " + R[1][2] + ", " + R[2][2] + ", " + translation.z);
