--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ function createProduct(position, localToWorld, text)
   var textGeometry = new THREE.Mesh( geometry, material );
   var p2 = p.clone().addScaledVector(zAxis, 0.04);
   textGeometry.position.copy(p2);
-  textGeometry.quaternion.copy(rot);
+  //textGeometry.quaternion.copy(rot);
   scene.add( textGeometry );
 
   // Save product information
